<resources>
    <string name="app_name">CriminalIntent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- UI Strings-->

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string> -->
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="last_crime">Last Crime</string>
    <string name="first_crime">First Crime</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="date_picker_time">Time of the crime</string>
    <string name="crime_time">Set time</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>

    <string name="ok">Ok</string>
    <string name="empty_crimes">There are no crimes added,tap the button to add a crime. </string>
    <string name="use_add_button">button to add a crime</string>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>



    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>


    <!--Reports-->
    <string name="crime_report">%1$s!The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>

    <string name="crime_report_subject">CriminalIntent Crime Report</string>

    <string name="send_report">Send crime report via</string>

    <string name="call_suspect">Call suspect</string>

    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
Crime scene photo (not set)
 </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>

    <string name="camera_get_back">You have come from Camera App</string>





</resources>
